# cmakeauto

./: .gitignore  CMakeLists.txt  README.md  text.txt
parserCode/include/: colorLogging.h  commandParser.h  commonDecl.h  tomlDecoding.h
parserCode/src/: commandParser.c  main.c  tomlDecoding.c
parserCode/test/automakeDirSimulation/randomFolder/innerFolder/: garbageFile.txt
parserCode/test/src/: main.c  tomlDecodingTest.c
test/automakeDirSimulation/.automake/: automakerc.toml
test/data/fullPossibleArg/: input.toml
test/data/inputExamplesToml/: inputWithCommentsOnPairs copy.toml  inputWithCommentsOnPairs.toml  inputWithCommentsWherever.toml  inputWithCommentsWhereverWithoutNextLineInTheEnd.toml  inputWithLastHeaderButNoValues.toml  simpleInput.toml  simpleInputButKeysWithoutValue.toml
test/src/: main.c  tomlDecodingTest.c  unordered_map_test.c
utilities/include/: unordered_map.h
utilities/src/: unordered_map.c
